syntax = "proto3";
option go_package = "../internal/contracts";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package notesService;

service NotesService {
  rpc GetAll(Empty) returns (GetAllResponse);
  rpc CreateNote(CreateNoteRequest) returns (Empty);
  rpc UpdateNote(UpdateNoteRequest) returns (Empty);
  rpc DeleteNote(DeleteNoteRequest) returns (Empty);
}

message NotesBody {
  string id = 1;
  string content = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp updated_at = 4;
}

message Empty {
  google.protobuf.Empty empty = 1;
}

message GetAllResponse {
  repeated NotesBody items = 1;
}

message UpdateNoteRequest {
  string id = 1;
  string content = 2;
}

message DeleteNoteRequest {
  string id = 1;
}

message CreateNoteRequest {
  string content = 1;
}
